unpackaged/objects/Opportunity.object
<CustomObject>
  <fields>
    <fullName>CFEs_Next_6_Months_D__c</fullName>
    <description>Total number of planned CFEs next 6 months towards Account associated with Opportunity.</description>
    <formula>Account.CFEs_Implants_Next_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of planned CFEs next 6 months towards Account associated with Opportunity.</inlineHelpText>
    <label># CFEs Next 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_While_AP_Open__c</fullName>
    <description>Number of IMPL CFEs performed towards the Account of the Opportunity while the account plan was open. Updated by cloud job "AggregateApCFEs".</description>
    <inlineHelpText>Number of CFEs performed towards the Account of the Opportunity while the account plan was open. Updated by cloud job "AggregateApCFEs".</inlineHelpText>
    <label># CFEs While AP Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CFEs_on_Track__c</fullName>
    <description>This field is enabled if # CFEs last 6M reaches or exceeds 5</description>
    <formula>IF(CFEs_Last_6_Months_D__c &gt;= 5, TRUE, FALSE)</formula>
    <inlineHelpText>This field is enabled if # CFEs last 6M reaches or exceeds 5</inlineHelpText>
    <label># CFEs on Track?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Competitor_Implant_Volume_F__c</fullName>
    <description>Calculation of # implants competitor</description>
    <formula>Account.Implants_Potential_Year__c-Sold_Implants_L12M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>calculated from Implant potential of the assigned account minus Implants solds last 12 Month</inlineHelpText>
    <label>Competitor Implant Volume_F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Competitor_Information__c</fullName>
    <description>Relevant information about Competitor</description>
    <label>Competitor Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Competitor__c</fullName>
    <description>Multiple selection to competitors</description>
    <inlineHelpText>Auswahl der Wettbewerber in der Praxis</inlineHelpText>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Anderer</fullName>
        </value>
        <value>
          <fullName>Bego</fullName>
        </value>
        <value>
          <fullName>Bicon Dental</fullName>
        </value>
        <value>
          <fullName>BIOMET 3i</fullName>
        </value>
        <value>
          <fullName>Bredent</fullName>
        </value>
        <value>
          <fullName>Camlog</fullName>
        </value>
        <value>
          <fullName>Champions</fullName>
        </value>
        <value>
          <fullName>ICX Templant</fullName>
        </value>
        <value>
          <fullName>Lifecore/Keystone</fullName>
        </value>
        <value>
          <fullName>Medentika</fullName>
        </value>
        <value>
          <fullName>MIS Implants</fullName>
        </value>
        <value>
          <fullName>Neoss</fullName>
        </value>
        <value>
          <fullName>Nobel Biocare</fullName>
        </value>
        <value>
          <fullName>Oraltronics</fullName>
        </value>
        <value>
          <fullName>Semados</fullName>
        </value>
        <value>
          <fullName>SIC Implantate</fullName>
        </value>
        <value>
          <fullName>Straumann</fullName>
        </value>
        <value>
          <fullName>Thommen Medical</fullName>
        </value>
        <value>
          <fullName>Zimmer Dental</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Conservative_Dentistry__c</fullName>
    <formula>if (includes( Account.Clinic_Treatment_Focus__c ,"Conservative dentistry"),True,False)</formula>
    <label>Conservative Dentistry</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ContractOrderConfirmed__c</fullName>
    <label>Contract/order confirmed</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>ContractOrderPresented__c</fullName>
    <label>Contract/order presented</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Created_by_Manager__c</fullName>
    <formula>CreatedBy.Manager.FirstName &amp; " "  &amp; CreatedBy.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by - Manager</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Created_by_Me__c</fullName>
    <description>Dynamic Checkbox that shows if the logged in user created the opportunity.
            Used in reports for X-SBU opportunities to show the originator of the lead their opportunities</description>
    <formula>IF(CreatedById ==  $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if created by yourself, and unchecked if not</inlineHelpText>
    <label>Created by Me</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_My_Direct_Reports__c</fullName>
    <description>created to meet this request
            https://dentsplysirona.my.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F90J0000000NQO&amp;fId=0D50J00003jUSvY</description>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Created_by_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Role</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Creator_Country__c</fullName>
    <formula>TEXT(CreatedBy.User_Country__c)</formula>
    <label>Creator Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CrossSellOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross-sell opportunity</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Current_customer_position__c</fullName>
    <label>Current customer position</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Concerns</fullName>
        </value>
        <value>
          <fullName>Enjoyable</fullName>
        </value>
        <value>
          <fullName>Excellent</fullName>
        </value>
        <value>
          <fullName>OK</fullName>
        </value>
        <value>
          <fullName>Risk</fullName>
        </value>
        <value>
          <fullName>Safe</fullName>
        </value>
        <value>
          <fullName>Uneasiness</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Current_products_used__c</fullName>
    <description>Used for trials &amp; tenders to track current products used</description>
    <label>Current products used</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerNotes__c</fullName>
    <inlineHelpText>Information added by the customer/contact when filling a webform as part of a digital campaign</inlineHelpText>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Customer_Opinion_of_Milling_Results__c</fullName>
    <label>Customer Opinion of Milling Results</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Customer was disappointed</fullName>
        </value>
        <value>
          <fullName>Customer was impressed</fullName>
        </value>
        <value>
          <fullName>Customer was satisfied</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Customer_profile_Quality_awareness__c</fullName>
    <label>Customer profile Quality awareness</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
        </value>
        <value>
          <fullName>2</fullName>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>4</fullName>
        </value>
        <value>
          <fullName>5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Customer_profile_Reputation__c</fullName>
    <label>Customer profile Reputation</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
        </value>
        <value>
          <fullName>2</fullName>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>4</fullName>
        </value>
        <value>
          <fullName>5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Customer_profile_communication__c</fullName>
    <label>Customer profile communication</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
        </value>
        <value>
          <fullName>2</fullName>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>4</fullName>
        </value>
        <value>
          <fullName>5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Customer_profile_innovative__c</fullName>
    <label>Customer profile innovative</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
        </value>
        <value>
          <fullName>2</fullName>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>4</fullName>
        </value>
        <value>
          <fullName>5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Customer_profile_sales_potential__c</fullName>
    <label>Customer profile sales potential</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>1</fullName>
        </value>
        <value>
          <fullName>2</fullName>
        </value>
        <value>
          <fullName>3</fullName>
        </value>
        <value>
          <fullName>4</fullName>
        </value>
        <value>
          <fullName>5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>DB_Competitor__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
    <label>DB Competitor</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Competitor A</fullName>
        </value>
        <value>
          <fullName>Competitor B</fullName>
        </value>
        <value>
          <fullName>Competitor C</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Opportunity Details Captured", "Missing: "&amp;IF( ISPICKVAL( Type ,""),"Type, ","")&amp;""&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, "Close Date, ","")&amp;""&amp;IF( Amount &lt;= 0, "Amount, ","")&amp;""&amp;IF( ISPICKVAL( LeadSource,""), "Lead Source, ","")&amp;""&amp;IF( LEN(NextStep)=0, "Next Steps",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( ISPICKVAL(Type,""), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,""), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Days_since_Next_Steps_Updated__c</fullName>
    <formula>TODAY() - Next_Steps_Last_Modified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Next Steps Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Dealer_Rep_Type__c</fullName>
    <label>Dealer Rep Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Cerec Consumables Specialist</fullName>
        </value>
        <value>
          <fullName>Digital Technology Specialist</fullName>
        </value>
        <value>
          <fullName>Equipment Specialist</fullName>
        </value>
        <value>
          <fullName>Field Service Consultant</fullName>
        </value>
        <value>
          <fullName>Territory Manager</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Dealer_Sales_Rep_secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Sales Rep (secondary)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Dealer Sales Rep (secondary))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
      <active>true</active>
      <booleanFilter>1 OR (2 AND 3 AND 5) OR (2 AND 3 AND 4)</booleanFilter>
      <errorMessage>You must select a distributor.</errorMessage>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>ERP Distributor, Non-ERP Distributor, DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.RecordTypeId</field>
        <operation>equals</operation>
        <value>CIM Account</value>
      </filterItems>
      <filterItems>
        <field>Account.OneAccount_Type__c</field>
        <operation>equals</operation>
        <value>Distributor, DNA Distributor</value>
      </filterItems>
      <filterItems>
        <field>Account.DistributorCategories__c</field>
        <operation>notContain</operation>
        <valueField>$Source.NA_Category__c</valueField>
      </filterItems>
      <filterItems>
        <field>Account.DistributorCategories__c</field>
        <operation>equals</operation>
        <value></value>
      </filterItems>
      <infoMessage>Search for the Delaer connected to this opportunity</infoMessage>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealer_s_Sales_Rep_Email__c</fullName>
    <description>Field to prepopulate the additional too in "E-mail the Opportunity" button for BeNelux market</description>
    <formula>If(TEXT($User.Market__c)='BeNelux',Dealer_s_Sales_Rep__r.Email,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer's Sales Rep Email</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Dealer_s_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer's Sales Rep</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>$Source.Dealer__c</field>
        <operation>equals</operation>
        <valueField>Contact.AccountId</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Dealer's Primary Contact)</relationshipLabel>
    <relationshipName>Dealer_Opportunities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Dealers_Sales_Rep_Type_secondary__c</fullName>
    <label>Dealers Sales Rep Type (secondary)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Cerec Consumables Specialist</fullName>
        </value>
        <value>
          <fullName>Digital Technology Specialist</fullName>
        </value>
        <value>
          <fullName>Equipment Specialist</fullName>
        </value>
        <value>
          <fullName>Field Service Consultant</fullName>
        </value>
        <value>
          <fullName>Territory Manager</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>DemoDate__c</fullName>
    <label>Demo Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>DemoNotes__c</fullName>
    <label>Demo Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>DentsplySironaSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DentsplySirona Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Distributor_Rep__c</fullName>
    <inlineHelpText>The name of the distributor partner rep for this opportunity</inlineHelpText>
    <label>Distributor Rep</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Distributor_Specialist__c</fullName>
    <label>Distributor Specialist</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ERP_Ortho__c</fullName>
    <description>ERP# (Ortho) as entered on the Account object</description>
    <formula>Account.ERP_Ortho__c</formula>
    <inlineHelpText>ERP# (Ortho) - fetched from the Account</inlineHelpText>
    <label>ERP# (ORTH)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Endodontics__c</fullName>
    <formula>if (includes( Account.Clinic_Treatment_Focus__c ,"Endodontics"),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endodontics</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Est_ATL_GrowthCY__c</fullName>
    <description>Shows the estimated growth in money for this Account. It compares Atlantis Sales LY with the Est ATL Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</description>
    <formula>IF (OR (Year (CloseDate) = Year(Today())+1,Year (CloseDate) = Year(Today()) ),Amount -  Account.TS_CY_1_D_DD_AllPCs_Atlantis__c  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the estimated growth in money for this Account. It compares Atlantis Sales LY with the Est ATL Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</inlineHelpText>
    <label>Est ATL Growth CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_ATL_Growth_CY_5000__c</fullName>
    <formula>Account.Est_ATL_Growth_CY_5000__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est ATL Growth CY&gt;5000€?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Est_ATL_Growth_CY__c</fullName>
    <description>This field shows the expected Atlantis growth in % on Account this CY compared to total Atlantis sales LY.</description>
    <formula>IF (Year (CloseDate) = Year(Today()) ,Account.XEst_ATL_Growth__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the expected Atlantis growth in % on Account this CY compared to total Atlantis sales LY.</inlineHelpText>
    <label>% Est ATL Growth CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Est_ATL_Sales_CY__c</fullName>
    <description>This field shows the Est Atlantis Sales CY for the Account associated with this Opportunity. The field is taken from the Account record and can therefore only by changed on the Account record.</description>
    <formula>IF ( $RecordType.Name ='GROW Lab Atlantis', Amount ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the Est Atlantis Sales CY for the Account associated with this Opportunity. The field is taken from the Account record and can therefore only by changed on the Account record.</inlineHelpText>
    <label>Est ATL Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Growth_5000__c</fullName>
    <formula>Account.Est_Growth_CY_5000_Euro__c</formula>
    <label>Est Growth CY &gt;5000 €</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Est_Growth_CY__c</fullName>
    <description>Shows the estimated growth in money for this Account. It compares Sales LY with the Est Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</description>
    <formula>IF (OR (Year (CloseDate) = Year(Today())+1,Year (CloseDate) = Year(Today()) ),Amount -  Account.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c ,0)</formula>
    <inlineHelpText>Shows the estimated growth in money for this Account. It compares Sales LY with the Est Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</inlineHelpText>
    <label>Est Growth CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Implant_Growth_CY_20__c</fullName>
    <formula>Account.Est_Implant_Growth_CY_20__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Implant Growth CY &gt;20?</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Est_Implant_Growth_CY__c</fullName>
    <formula>Account.Est_Implant_Growth_CY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Implant Growth CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Implant_Volume_CY_D_JP__c</fullName>
    <formula>Account.Est_Implant_Volume_CY_D__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Implant Volume CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Other_Sales_CY_D__c</fullName>
    <description>Shows the Est Non-Atlantis Sales CY  for Lab accounts. The field can be changed only from the Account record. Changes are accepted only during the same closing year. After that this field will be freezed.</description>
    <formula>Est_Sales_Other_D__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Est Non-Atlantis Sales CY  for Lab accounts. The field can be changed only from the Account record. Changes are accepted only during the same closing year. After that this field will be freezed.</inlineHelpText>
    <label>Est Other Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Sales_CY_2__c</fullName>
    <description>Field added to add Est Sales CY on the Opp instead of inheriting from Account.</description>
    <label>Est Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Sales_CY__c</fullName>
    <description>Shows the Est Sales CY added manually on the Opp by the sales rep. Formerly showed data originating form the Account - formula saved below:  IF ( OR($RecordType.Name ='GROW Restorative', $RecordType.Name ='GROW Surgical'), Amount ,0)</description>
    <formula>Est_Sales_CY_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Sales CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Sales_Growth__c</fullName>
    <formula>(Account_Est_Sales_CY__c-Sales_Dental_LY__c)/Sales_Dental_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wachstum des Umsatzes in %</inlineHelpText>
    <label>%Est Sales Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Est_Sales_LY__c</fullName>
    <inlineHelpText>This field contains the Est Sales-number as set beginning of Dec Last Year. Its updated by the SFDC administrators as a preparation for the new year.</inlineHelpText>
    <label>Est Sales LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_Sales_Other_D__c</fullName>
    <description>updated through PushAmountToOpportunities trigger, then Est Other Sales CY (D) shows its value.</description>
    <label>Est Sales Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_of_ATL_Abuts_Current_CY__c</fullName>
    <description>FOR LAB ACCOUNTS: The estimated # of Atlantis Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of Atlantis Abutments you anticipate the clinic to CONSUME current year.</description>
    <inlineHelpText>FOR LAB ACCOUNTS: The estimated # of Atlantis Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of Atlantis Abutments you anticipate the clinic to CONSUME current year.</inlineHelpText>
    <label>Est # of ATL Abut's CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_of_ATL_ISUS_CY__c</fullName>
    <label>Est # of ATL ISUS CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_of_Implants_Current_CY__c</fullName>
    <description>Input the estimated # of Implants this Customer will purchase within current CY.</description>
    <inlineHelpText>Input the estimated # of Implants this Customer will purchase within current CY.</inlineHelpText>
    <label>Est # of Implants CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_of_Implants_LY__c</fullName>
    <inlineHelpText>This field contains the Est # of Implants as set in the beginning of Dec last year. It's updated by the SFDC Administrators as a preparation for the new year.</inlineHelpText>
    <label>Est # of Implants LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Est_of_Stock_Abuts_Current_CY__c</fullName>
    <description>FOR LAB ACCOUNTS: The estimated # of Stock Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of ATIS Stock Abutments you anticipate the clinic to CONSUME &amp;/or PURCHASE current year.</description>
    <inlineHelpText>FOR LAB ACCOUNTS: The estimated # of Stock Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of ATIS Stock Abutments you anticipate the clinic to CONSUME &amp;/or PURCHASE current year.</inlineHelpText>
    <label>Est # of Stock Abut's CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Expectations__c</fullName>
    <description>Used to track any specific expectations for the product/service</description>
    <inlineHelpText>What are the expectations for the product/service asked for?</inlineHelpText>
    <label>Expectations</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>First_Atlantis_Sales_Date__c</fullName>
    <formula>Account.First_Atlantis_Sales_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Atlantis Sales Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Fulfillment_date__c</fullName>
    <inlineHelpText>Enter the date when you assume orders corresponding to the amount for this Opportunity will have been placed.</inlineHelpText>
    <label>Fulfillment date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Fulfillment_of_target_ATL_Abut__c</fullName>
    <formula>IF(
OR(
AND( of_ATL_Abuts_YTD__c = 0, Est_of_ATL_Abuts_Current_CY__c = 0),
AND( of_ATL_Abuts_YTD__c = 0, Est_of_ATL_Abuts_Current_CY__c &gt; 0)),0,
IF(
AND( of_ATL_Abuts_YTD__c &gt; 0, Est_of_ATL_Abuts_Current_CY__c = 0),1,
IF(
AND( of_ATL_Abuts_YTD__c &lt; 0, Est_of_ATL_Abuts_Current_CY__c &gt;= 0),-1,
of_ATL_Abuts_YTD__c/ Est_of_ATL_Abuts_Current_CY__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment of target ATL Abut</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Fulfillment_of_target_CFE__c</fullName>
    <description>Fulliment oft CFE Target = CFEs Current Year / CFE Target Current Year</description>
    <formula>IF(
OR(
AND( CFEs_CY__c = 0, CFE_Target_CY__c = 0),
AND( CFEs_CY__c = 0, CFE_Target_CY__c &gt; 0)),0,
IF(
AND( CFEs_CY__c &gt; 0, CFE_Target_CY__c = 0),1,
IF(
AND( CFEs_CY__c &lt; 0, CFE_Target_CY__c &gt;= 0),-1,
CFEs_CY__c/CFE_Target_CY__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Erreichung Anzahl geplanten Besuche für dieses Jahr</inlineHelpText>
    <label>Fulfillment of target CFE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Fulfillment_of_target_ISUS__c</fullName>
    <formula>IF(
OR(
AND( Sold_ATL_ISUS_CY__c = 0, Est_of_ATL_ISUS_CY__c = 0),
AND( Sold_ATL_ISUS_CY__c = 0, Est_of_ATL_ISUS_CY__c &gt; 0)),0,
IF(
AND( Sold_ATL_ISUS_CY__c &gt; 0, Est_of_ATL_ISUS_CY__c = 0),1,
IF(
AND( Sold_ATL_ISUS_CY__c &lt; 0, Est_of_ATL_ISUS_CY__c &gt;= 0),-1,
Sold_ATL_ISUS_CY__c/ Est_of_ATL_ISUS_CY__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment of target ISUS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Fulfillment_of_target_Implants__c</fullName>
    <description>fullfillment of sold Implants = Actual sold implants CY/Est # of Implants CY</description>
    <formula>IF(
OR(
AND( of_Implants_Sold_YTD__c = 0, Est_Implant_Volume_CY_D_JP__c = 0),
AND( of_Implants_Sold_YTD__c = 0, Est_Implant_Volume_CY_D_JP__c &gt; 0)),0,
IF(
AND( of_Implants_Sold_YTD__c &gt; 0, Est_Implant_Volume_CY_D_JP__c = 0),1,
IF(
AND( of_Implants_Sold_YTD__c &lt; 0, Est_Implant_Volume_CY_D_JP__c &gt;= 0),-1,
of_Implants_Sold_YTD__c/Est_Implant_Volume_CY_D_JP__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aktueller Erfüllungsgrad zu den geplanten Implantaten dieses Jahr</inlineHelpText>
    <label>Fulfillment of target Implants</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Fulfillment_of_target_Sales__c</fullName>
    <description>Fulliment of the estemated sales. Based on sales CY to estemated sales</description>
    <formula>IF(
OR(
AND( Sales_Dental_YTD__c = 0, Account_Est_Sales_CY__c = 0),
AND( Sales_Dental_YTD__c = 0, Account_Est_Sales_CY__c &gt; 0)),0,
IF(
AND( Sales_Dental_YTD__c &gt; 0, Account_Est_Sales_CY__c = 0),1,
IF(
AND( Sales_Dental_YTD__c &lt; 0, Account_Est_Sales_CY__c &gt;= 0),-1,
Sales_Dental_YTD__c/Account_Est_Sales_CY__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aktueller Stand zum geplanten Umsatz</inlineHelpText>
    <label>Fulfillment of target Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Fulfillment_of_target_Stock_Abut__c</fullName>
    <formula>IF(
OR(
AND( of_Stock_Abuts_YTD__c = 0, Est_of_Stock_Abuts_Current_CY__c = 0),
AND( of_Stock_Abuts_YTD__c = 0, Est_of_Stock_Abuts_Current_CY__c &gt; 0)),0,
IF(
AND( of_Stock_Abuts_YTD__c &gt; 0, Est_of_Stock_Abuts_Current_CY__c = 0),1,
IF(
AND( of_Stock_Abuts_YTD__c &lt; 0, Est_of_Stock_Abuts_Current_CY__c &gt;= 0),-1,
of_Stock_Abuts_YTD__c / Est_of_Stock_Abuts_Current_CY__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment of target Stock Abut</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>GET_AP_Red_Light_Focus_Approval__c</fullName>
    <inlineHelpText>Field set by Sales Manager to denote that approval is given to the Sales Rep to continue to focus on this GET AP even though stage duration is &gt;90 days. If "No" is selected, the GET AP will automatically be closed with status "Lost".</inlineHelpText>
    <label>Red Progress Status Focus Approval</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>No</fullName>
        </value>
        <value>
          <fullName>Yes</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
</CustomObject>